--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>Kai Sellgren</title>
 </head>
 <body>
-	<a href="template-monster-screenshot-viewer">Template Monster Screenshot Viewer</a>
+	<p>There's nothing here.</p>
+  <p>
+    <a href="/docs">Are you perhaps looking for the docs?</a>
+  </p>
 </body>
 </html>
