Add a redirection from index.html to Rust docs

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <p>
     <a href="/docs">Are you perhaps looking for the docs?</a>
   </p>
+  <script>window.location = '/doc'</script>
 </body>
 </html>
