Update default doc url

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 	<p>There's nothing here.</p>
   <p>
-    <a href="/docs">Are you perhaps looking for the docs?</a>
+    <a href="/doc/rust_git">Are you perhaps looking for the docs?</a>
   </p>
-  <script>window.location = '/doc'</script>
+  <script>window.location = '/doc/rust_git'</script>
 </body>
 </html>
